mobile app additions
mobile-webapp tags, icons

for adding to homescreen

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,11 +3,26 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="mpv remote">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  
   <title>mpvremote</title>
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href='/img/favicon-44d68c3f.png' rel='icon' type='image/png'>
   <link rel="stylesheet" href="/style/tweaks.css">
+  
+  <link href="/img/icons/Icon-76@2x.png" sizes="152x152" rel="apple-touch-icon-precomposed">
+  <link href="/img/icons/Icon-72@2x.png" sizes="144x144" rel="apple-touch-icon-precomposed">
+  <link href="/img/icons/Icon-76.png" sizes="76x76" rel="apple-touch-icon-precomposed">
+  <link href="/img/icons/Icon-72.png" sizes="72x72" rel="apple-touch-icon-precomposed">
+  <link href="/img/icons/Icon-60@2x.png" sizes="120x120" rel="apple-touch-icon-precomposed">
+  <link href="/img/icons/Icon@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
+  <link href="/img/icons/Icon.png" sizes="57x57" rel="apple-touch-icon-precomposed">
 </head>
 <body>
 
